Compiler/tests/typing/good/testfile-shadow-1.rs
fn main() {
   let x = 42;
   let x = x+1;
}
