Compiler/tests/typing/bad/testfile-call-2.rs

fn foo() {}
fn main() { foo(42); }
